SPCTR-2205 Number Control - Dynamic Content Icon - Fixed z-index since icon was hidden when input field was clicked

--- a/src/components/number-control/editor.lazy.scss
+++ b/src/components/number-control/editor.lazy.scss
@@ -24,6 +24,7 @@
 				left: 75%;
 				bottom: 0%;
 				height: $spectra-control-input-height;
+				z-index: 1;
 			}
 
 		}
@@ -65,6 +66,7 @@
 			stroke: $spectra-color-icon;
 			stroke-width: 1.4;
 			fill: none;
+			z-index: 1;
 		}
 
 	}
